# mpesa-dashboard

./: .env  Makefile  README.md  docker-compose.yml
.github/workflows/: ci-cd.yaml
k8s/: .gitignore  backend-deployment.yaml  frontend-deployment.yaml  kafka-deployment.yaml  nginx-deployment.yaml  pod.yaml  pvc.yaml  zookeeper-deployment.yaml
k8s/configs/: kafka-configmap.yaml  log4j-configmap.yaml  log4j.properties  nginx-configmap.yaml  zoo-configmap.yaml  zoo.cfg
k8s/routes/: backend-route.yaml  frontend-route.yaml  nginx-route.yaml
k8s/services/: backend-service.yaml  frontend-service.yaml  kafka-service.yaml  nginx-service.yaml  zookeeper-service.yaml
mpesa-dashboard-backend/: .gitignore  Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml  start.sh
mpesa-dashboard-backend/app/: api.py  kafka_consumer.py  kafka_producer.py  main.py
mpesa-dashboard-frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
mpesa-dashboard-frontend/nginx/ssl/: nginx.crt  nginx.key
mpesa-dashboard-frontend/src/: App.tsx  main.tsx  theme.ts
mpesa-dashboard-frontend/src/components/: Table.tsx  Upload.tsx
mpesa-dashboard-frontend/src/components/Home/: Calendar.tsx  (+4 more)
mpesa-dashboard-frontend/src/hooks/: useIsLoading.tsx
mpesa-dashboard-frontend/src/layouts/: Layout.tsx
mpesa-dashboard-frontend/src/pages/: Dashboard.tsx  HomePage.tsx  ReceiptsPage.tsx  Transactions.tsx  UploadFile.tsx
mpesa-dashboard-frontend/src/services/: api.ts
mpesa-dashboard-frontend/src/store/: store.ts  uploadSlice.ts
(+15 files in other folders)
